--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,6 +11,12 @@
     font-weight: bold;
   }
 
+  button[data-bs-toggle="collapse"]{
+    &:focus{
+      box-shadow: none;
+    }
+  }
+
   .navbar-toggler{
     color : $white-color;
     border: 1px solid $white-color;
